objects/Engagement_Map_Product_Doc_Links__c.object
<CustomObject>
    <description>Document Links for products in the Engagement Map</description>
    <fields>
        <fullName>Doc_Link_Order__c</fullName>
        <description>The order for which the document link should be displayed</description>
        <label>Doc Link Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Doc_Link_Type__c</fullName>
        <description>The type of the document link</description>
        <label>Doc Link Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Genie</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Link_URL__c</fullName>
        <description>The document link URL for the Engagement Map document reference</description>
        <label>Document Link URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EngMap_Product_Name__c</fullName>
        <description>High level Products used in the Engagement Map</description>
        <label>EngMap Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>iWD</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>GVP</fullName>
                </value>
                <value>
                    <fullName>Inbound Voice</fullName>
                </value>
                <value>
                    <fullName>Knowledge Center</fullName>
                </value>
                <value>
                    <fullName>Mobile Engagement</fullName>
                </value>
                <value>
                    <fullName>Nuance</fullName>
                </value>
                <value>
                    <fullName>Outbound Voice</fullName>
                </value>
                <value>
                    <fullName>Proactive Notification</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
                <value>
                    <fullName>Virtual Hold</fullName>
                </value>
                <value>
                    <fullName>Web Callback</fullName>
                </value>
                <value>
                    <fullName>Web Collaboration</fullName>
                </value>
                <value>
                    <fullName>Web Engagement</fullName>
                </value>
                <value>
                    <fullName>Interaction Analytics</fullName>
                </value>
                <value>
                    <fullName>Interaction Recording</fullName>
                </value>
                <value>
                    <fullName>Quality Management</fullName>
                </value>
                <value>
                    <fullName>WFM</fullName>
                </value>
                <value>
                    <fullName>CIM</fullName>
                </value>
                <value>
                    <fullName>SIP</fullName>
                </value>
                <value>
                    <fullName>Video Gateway</fullName>
                </value>
                <value>
                    <fullName>InfoMart</fullName>
                </value>
                <value>
                    <fullName>Interactive Insights</fullName>
                </value>
                <value>
                    <fullName>Conversation Manager</fullName>
                </value>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Speechstorm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Engagement Map Product Doc Link</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EngMap_Product_Name__c</columns>
        <columns>Doc_Link_Type__c</columns>
        <columns>Doc_Link_Order__c</columns>
        <columns>Document_Link_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Engagement Map Product Doc Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagement Map Product Doc Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>